--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       <div class="title container">
         <div>
           <h1>Traditional Bakery</h1>
+          <h3 class="main-quote">Made with LOVE</h3>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus,
             error saepe. Nam voluptas eaque deleniti quibusdam ad iste sed totam
@@ -95,133 +96,338 @@
       </div>
     </header>
     <main>
-      <section class="container">
-        <h2 class="customer">CUSTOMER FAVOURITES</h2>
-        <div class="product">
-          <div class="hover">
-            <img
-              class="bakery"
-              src="./img/top-view-vegan-baked-products-arrangement.jpg"
-              alt="bakery"
-            />
-            <div class="middle">
-              <div class="text">
-                <h3 class="hover-title">Bread</h3>
-                <div class="price">
-                  <span class="hover-paragraph price1"> 6$ </span>
-                  <span class="hover-paragraph gr"> 350g </span>
+      <section class="products">
+        <div class="container">
+          <h2 class="customer">CUSTOMER FAVOURITES</h2>
+          <div class="product">
+            <div class="hover">
+              <img
+                class="bakery"
+                src="./img/top-view-vegan-baked-products-arrangement.jpg"
+                alt="bakery"
+              />
+              <div class="middle">
+                <div class="text">
+                  <h3 class="hover-title">Bread</h3>
+                  <div class="price">
+                    <span class="hover-paragraph price1"> 6$ </span>
+                    <span class="hover-paragraph gr"> 350g </span>
+                  </div>
+                  <p class="hover-paragraph paragraph">
+                    <span>Ingredients:</span>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Aliquid hic ea molestias!
+                  </p>
+                  <button class="hover-button">
+                    <a href="#">Add to cart</a>
+                  </button>
                 </div>
-                <p class="hover-paragraph paragraph">
-                  <span>Ingredients:</span>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Aliquid hic ea molestias!
-                </p>
-                <button class="hover-button">
-                  <a href="#">Add to cart</a>
-                </button>
+              </div>
+            </div>
+            <div class="hover">
+              <div class="new">NEW</div>
+              <img class="bakery" src="./img/2.jpg" alt="bakery" />
+              <div class="middle">
+                <div class="text">
+                  <h3 class="hover-title">Bread</h3>
+                  <div class="price">
+                    <span class="hover-paragraph price1"> 6$ </span>
+                    <span class="hover-paragraph gr"> 350g </span>
+                  </div>
+                  <p class="hover-paragraph paragraph">
+                    <span>Ingredients:</span>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Aliquid hic ea molestias!
+                  </p>
+                  <button class="hover-button">
+                    <a href="#">Add to cart</a>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="hover">
+              <img class="bakery" src="./img/3.jpg" alt="bakery" />
+              <div class="middle">
+                <div class="text">
+                  <h3 class="hover-title">Bread</h3>
+                  <div class="price">
+                    <span class="hover-paragraph price1"> 6$ </span>
+                    <span class="hover-paragraph gr"> 350g </span>
+                  </div>
+                  <p class="hover-paragraph paragraph">
+                    <span>Ingredients:</span>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Aliquid hic ea molestias!
+                  </p>
+                  <button class="hover-button">
+                    <a href="#">Add to cart</a>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="hover">
+              <div class="new">NEW</div>
+              <img class="bakery" src="./img/4.jpg" alt="bakery" />
+              <div class="middle">
+                <div class="text">
+                  <h3 class="hover-title">Bread</h3>
+                  <div class="price">
+                    <span class="hover-paragraph price1"> 6$ </span>
+                    <span class="hover-paragraph gr"> 350g </span>
+                  </div>
+                  <p class="hover-paragraph paragraph">
+                    <span>Ingredients:</span>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Aliquid hic ea molestias!
+                  </p>
+                  <button class="hover-button">
+                    <a href="#">Add to cart</a>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="hover">
+              <img class="bakery" src="./img/5.jpg" alt="bakery" />
+              <div class="middle">
+                <div class="text">
+                  <h3 class="hover-title">Bread</h3>
+                  <div class="price">
+                    <span class="hover-paragraph price1"> 6$ </span>
+                    <span class="hover-paragraph gr"> 350g </span>
+                  </div>
+                  <p class="hover-paragraph paragraph">
+                    <span>Ingredients:</span>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Aliquid hic ea molestias!
+                  </p>
+                  <button class="hover-button">
+                    <a href="#">Add to cart</a>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="hover">
+              <img class="bakery" src="./img/6.jpg" alt="bakery" />
+              <div class="middle">
+                <div class="text">
+                  <h3 class="hover-title">Bread</h3>
+                  <div class="price">
+                    <span class="hover-paragraph price1"> 6$ </span>
+                    <span class="hover-paragraph gr"> 350g </span>
+                  </div>
+                  <p class="hover-paragraph paragraph">
+                    <span>Ingredients:</span>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Aliquid hic ea molestias!
+                  </p>
+                  <button class="hover-button">
+                    <a href="#">Add to cart</a>
+                  </button>
+                </div>
               </div>
             </div>
           </div>
-          <div class="hover">
-            <div class="new">NEW</div>
-            <img class="bakery" src="./img/2.jpg" alt="bakery" />
-            <div class="middle">
-              <div class="text">
-                <h3 class="hover-title">Bread</h3>
-                <div class="price">
-                  <span class="hover-paragraph price1"> 6$ </span>
-                  <span class="hover-paragraph gr"> 350g </span>
-                </div>
-                <p class="hover-paragraph paragraph">
-                  <span>Ingredients:</span>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Aliquid hic ea molestias!
-                </p>
-                <button class="hover-button">
-                  <a href="#">Add to cart</a>
-                </button>
+        </div>
+      </section>
+
+      <section class="about-us">
+        <div class="container">
+          <div class="about-flex">
+            <div>
+              <h2 class="about-us-title">About Us</h2>
+              <p class="about-us-paragraph">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis,
+                deleniti neque at voluptatum tempora, dolore consequatur
+                blanditiis praesentium consequuntur libero debitis aliquam quasi
+                hic provident? Eaque assumenda est architecto voluptate ipsam!
+                Ea enim tempore illo vitae laudantium numquam. Pariatur magni id
+                hic aliquam quos. Ratione dolorum veritatis quaerat dolor
+                delectus ipsam assumenda odio facere laborum fuga itaque quis
+                veniam dignissimos, ipsum reprehenderit cum. Fugit molestias cum
+                facere numquam totam ipsum quas nostrum aliquam quasi. Ipsum
+                velit deserunt alias hic ratione aperiam, quidem repellat
+                voluptatem sint possimus! Repellat ducimus, voluptas ut
+                repellendus pariatur, praesentium fugit cum, incidunt aut dolor
+                optio obcaecati!
+              </p>
+            </div>
+            <div class="carousel">
+              <div class="carousel--item">
+                <img src="./img/2.jpg" />
+              </div>
+              <div class="carousel--item carousel--item--selected">
+                <img src="./img/3.jpg" />
+              </div>
+
+              <div class="carousel--item">
+                <img
+                  src="./img/top-view-vegan-baked-products-arrangement.jpg"
+                />
               </div>
             </div>
           </div>
-          <div class="hover">
-            <img class="bakery" src="./img/3.jpg" alt="bakery" />
-            <div class="middle">
-              <div class="text">
-                <h3 class="hover-title">Bread</h3>
-                <div class="price">
-                  <span class="hover-paragraph price1"> 6$ </span>
-                  <span class="hover-paragraph gr"> 350g </span>
+        </div>
+      </section>
+      <section class="delivery">
+        <div class="container">
+          <div class="delivery-qa">
+            <div>
+              <h2 class="delivery-title">Delivery</h2>
+              <p class="delivery-paragraph">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Blanditiis nam nemo quia libero nisi nesciunt eum laudantium
+                molestias! Vitae officiis sapiente molestias soluta itaque,
+                minima vero nobis nam? Eveniet dolorem rerum aut cumque esse est
+                tempore dignissimos cupiditate deserunt beatae labore porro quia
+                expedita optio, eligendi corporis dolor laborum voluptates.
+              </p>
+            </div>
+            <div>
+              <h3 class="accordion-title">Q & A</h3>
+              <div class="accordion">
+                <div class="item">
+                  <h3 class="number">01</h3>
+                  <h3 class="qa-text">How to order?</h3>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="icon"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M19.5 8.25l-7.5 7.5-7.5-7.5"
+                    />
+                  </svg>
+
+                  <div class="hidden-box">
+                    <p>
+                      Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                      Quis, deserunt nam dolores modi cumque doloribus autem
+                      asperiores et facere veritatis maxime placeat nisi ea
+                      debitis natus quia esse nostrum fugiat.
+                    </p>
+                    <ul>
+                      <li>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit.
+                      </li>
+                      <li>
+                        Maxime esse possimus ipsum, quae vitae facilis beatae
+                      </li>
+                      <li>
+                        Corporis quam eaque dolorem odio, consequuntur nulla!
+                      </li>
+                      <li>Quo facere quaerat perferendis laborum?</li>
+                    </ul>
+                  </div>
                 </div>
-                <p class="hover-paragraph paragraph">
-                  <span>Ingredients:</span>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Aliquid hic ea molestias!
-                </p>
-                <button class="hover-button">
-                  <a href="#">Add to cart</a>
-                </button>
+
+                <div class="item open">
+                  <h3 class="number">02</h3>
+                  <h3 class="qa-text">Where is your location?</h3>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="icon"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M19.5 8.25l-7.5 7.5-7.5-7.5"
+                    />
+                  </svg>
+
+                  <div class="hidden-box">
+                    <p>
+                      Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                      Quis, deserunt nam dolores modi cumque doloribus autem
+                      asperiores et facere veritatis maxime placeat nisi ea
+                      debitis natus quia esse nostrum fugiat.
+                    </p>
+                    <ul>
+                      <li>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit.
+                      </li>
+                      <li>
+                        Maxime esse possimus ipsum, quae vitae facilis beatae
+                      </li>
+                      <li>
+                        Corporis quam eaque dolorem odio, consequuntur nulla!
+                      </li>
+                      <li>Quo facere quaerat perferendis laborum?</li>
+                    </ul>
+                  </div>
+                </div>
+
+                <div class="item">
+                  <h3 class="number">03</h3>
+                  <h3 class="qa-text">How to pay?</h3>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="icon"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M19.5 8.25l-7.5 7.5-7.5-7.5"
+                    />
+                  </svg>
+
+                  <div class="hidden-box">
+                    <p>
+                      Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                      Quis, deserunt nam dolores modi cumque doloribus autem
+                      asperiores et facere veritatis maxime placeat nisi ea
+                      debitis natus quia esse nostrum fugiat.
+                    </p>
+                    <ul>
+                      <li>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit.
+                      </li>
+                      <li>
+                        Maxime esse possimus ipsum, quae vitae facilis beatae
+                      </li>
+                      <li>
+                        Corporis quam eaque dolorem odio, consequuntur nulla!
+                      </li>
+                      <li>Quo facere quaerat perferendis laborum?</li>
+                    </ul>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-          <div class="hover">
-            <div class="new">NEW</div>
-            <img class="bakery" src="./img/4.jpg" alt="bakery" />
-            <div class="middle">
-              <div class="text">
-                <h3 class="hover-title">Bread</h3>
-                <div class="price">
-                  <span class="hover-paragraph price1"> 6$ </span>
-                  <span class="hover-paragraph gr"> 350g </span>
-                </div>
-                <p class="hover-paragraph paragraph">
-                  <span>Ingredients:</span>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Aliquid hic ea molestias!
-                </p>
-                <button class="hover-button">
-                  <a href="#">Add to cart</a>
-                </button>
-              </div>
-            </div>
-          </div>
-          <div class="hover">
-            <img class="bakery" src="./img/5.jpg" alt="bakery" />
-            <div class="middle">
-              <div class="text">
-                <h3 class="hover-title">Bread</h3>
-                <div class="price">
-                  <span class="hover-paragraph price1"> 6$ </span>
-                  <span class="hover-paragraph gr"> 350g </span>
-                </div>
-                <p class="hover-paragraph paragraph">
-                  <span>Ingredients:</span>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Aliquid hic ea molestias!
-                </p>
-                <button class="hover-button">
-                  <a href="#">Add to cart</a>
-                </button>
-              </div>
-            </div>
-          </div>
-          <div class="hover">
-            <img class="bakery" src="./img/6.jpg" alt="bakery" />
-            <div class="middle">
-              <div class="text">
-                <h3 class="hover-title">Bread</h3>
-                <div class="price">
-                  <span class="hover-paragraph price1"> 6$ </span>
-                  <span class="hover-paragraph gr"> 350g </span>
-                </div>
-                <p class="hover-paragraph paragraph">
-                  <span>Ingredients:</span>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Aliquid hic ea molestias!
-                </p>
-                <button class="hover-button">
-                  <a href="#">Add to cart</a>
-                </button>
-              </div>
+        </div>
+      </section>
+
+      <section class="location-section">
+        <div class="container">
+          <div class="location-flex">
+            <h2 class="location-title">Location</h2>
+            <p class="quote">You can find us</p>
+            <div class="map">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d23827.723575135053!2d44.80179548263548!3d41.71047417326277!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sge!4v1684143585258!5m2!1sen!2sge"
+                width="600"
+                height="450"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
             </div>
           </div>
         </div>
