Bakery-Web-Page

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
   </head>
   <body>
     <header>
-      <nav class="container" data-menu-underline-from-center>
-        <ul class="navigation">
-          <li>
-            <a href="#"
-              ><img
-                class="logo"
-                src="./img/116394822015ggliqe2nzkxmx7k41ucgl8c2sxkoubtfynof9ivi8mqforaaahnqxnzikucvtnp1x6l4we54zfkn9fg7qtjlkujtcgdasity9vx.png"
-            /></a>
-          </li>
-          <div class="middle-nav">
+      <nav class="container navigation" data-menu-underline-from-center>
+        <div class="main-logo">
+          <a href="#"
+            ><img
+              class="logo"
+              src="./img/116394822015ggliqe2nzkxmx7k41ucgl8c2sxkoubtfynof9ivi8mqforaaahnqxnzikucvtnp1x6l4we54zfkn9fg7qtjlkujtcgdasity9vx.png"
+          /></a>
+        </div>
+        <ul class="middle-navigation">
+          <div class="middle-nav mid-nav gap">
             <li><a href="#">About us</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Delivery</a></li>
@@ -46,6 +46,11 @@
             </a>
           </li>
         </ul>
+        <div class="burger" id="nav-burger">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
       </nav>
       <div class="title container">
         <div>
@@ -61,7 +66,7 @@
             temporibus voluptatem magnam laboriosam incidunt cumque hic quisquam
             assumenda vitae, doloribus totam.
           </p>
-          <div>
+          <div class="btn">
             <button class="shop-now"><a href="#">Shop Now</a></button>
           </div>
         </div>
